fix: words wrap into balloons

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -77,7 +77,7 @@ li:hover {
     min-width: 180px;
     max-width: 600px;
     text-align: justify;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .message-received {
